clusters/talos-robbinsdale/apps-flux-new/gatus/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: envoy-gateway-system
  hostnames:
    - "gatus.rajsingh.info"
    - "gatus.lukehouge.com"
    - "status.rajsingh.info"
    - "status.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gatus
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
